--- a/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
+++ b/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
@@ -4,10 +4,7 @@
   <section class="my-section title-container">
     <div class="row">
       <div class="col-md-12">
-        <h4 class="content-title">{{getSlateName()}}
-          <a style="display: none" class="btn btn-sm" href="#">
-            <img src="../../../../../assets/images/pen.png" alt="edit"/>
-          </a>
+        <h4 class="content-title">{{getOperatorName()}} - {{getSlateName()}}
         </h4>
       </div>
     </div>
