--- a/src/app/front/components/nba-lineup-optimizer/nba-filter/nba-filter.component.html
+++ b/src/app/front/components/nba-lineup-optimizer/nba-filter/nba-filter.component.html
@@ -1,5 +1,4 @@
-<div class="modal fade" id="advance-feature-filters" #settingPopup tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel">
+<div class="modal fade" id="advance-feature-filters" tabindex="-1" #settingPopup role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -13,18 +12,18 @@
           </li>
           <li role="presentation"><a href="#Filters" aria-controls="profile" role="tab" data-toggle="tab">Filters</a>
           </li>
-          <li role="presentation"><a href="#Stacking" aria-controls="messages" role="tab"
-                                     data-toggle="tab">Stacking</a></li>
+          <!--<li role="presentation"><a href="#Stacking" aria-controls="messages" role="tab"
+                                     data-toggle="tab">Stacking</a></li>-->
         </ul>
         <!-- /Nav tabs -->
       </div>
 
       <!-- Modal Body -->
       <div class="modal-body">
-        <div class="row row30" *ngIf="isLogIn">
+        <div class="row row30" *ngIf="false"> <!--*ngIf="isLogIn"-->
           <div class="col-lg-12 text-center yellow-container">
             <a class="btn btn-link btn-link-back" (click)="onBtnSaveAdvFilterValueClicked()"
-               [class.inactive]="!isSettingsUpdated"><img
+               [class.disabled]="!isSettingsUpdated"><img
               src="../../../../../assets/img/save_general_n.png"/> Save
               Settings</a>
             <a class="btn btn-link btn-link-back" (click)="onBtnRestoreDefaultClicked()"><img
@@ -83,21 +82,21 @@
                         <span id="mmsSliderVal">{{salarySettingValue[0]}}-{{salarySettingValue[1]}}</span></h4>
                       <input id="mms" type="text"/>
                       <span
-                        class="slider-range slider-min">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.MLB_MIN_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.MLB_MIN_SALARY_FOR_DRAFT_KING}}</span><span
-                      class="slider-range slider-max">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.MLB_MAX_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.MLB_MAX_SALARY_FOR_DRAFT_KING}}</span>
+                        class="slider-range slider-min">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.NFL_MIN_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.NFL_MIN_SALARY_FOR_DRAFT_KING}}</span><span
+                      class="slider-range slider-max">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.NFL_MAX_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.NFL_MAX_SALARY_FOR_DRAFT_KING}}</span>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="filter-range-container text-center">
+                    <!--<div class="filter-range-container text-center">
                       <div class="checkbox-overlay">
                         <div class="checkbox">
-                          <input id="checkbox1" type="checkbox" [(ngModel)]="noBattingVsPitchers">
+                          <input id="checkbox1" type="checkbox" [(ngModel)]="noDefVsOpp">
                           <label for="checkbox1">
-                            No Batters vs Pitchers
+                            No Def vs Opp
                           </label>
                         </div>
                       </div>
-                    </div>
+                    </div>-->
                   </div>
                 </div>
 
@@ -146,7 +145,7 @@
                           <span class="slider-range slider-max">{{advFilterSettings?.valueMax}}</span>
                         </div>
                       </div>
-                      <div class="col-md-12">
+                      <!--<div class="col-md-12">
                         <div class="filter-range-container">
                           <h4 class="rangeslider-value">Batting Order: <span *ngIf="battingOrderFilterValue"
                                                                              id="BattingOrderSliderVal">
@@ -156,15 +155,15 @@
                           <input id="BattingOrder" type="text"/>
                           <span class="slider-range slider-min">0</span><span class="slider-range slider-max">9</span>
                         </div>
-                      </div>
+                      </div>-->
                       <div class="col-md-12">
                         <div class="filter-range-container">
                           <h4 class="rangeslider-value">Position:
                           </h4>
                           <p-multiSelect [options]="positions"
+                                         class="player-position-opt"
                                          [filter]="false"
                                          [showToggleAll]="false"
-                                         class="player-position-opt"
                                          [(ngModel)]="positionFilterValue"
                                          (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
                         </div>
@@ -187,7 +186,7 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-md-12 table-responsive team-table-container">
+                      <div class="col-md-12 table-responsive team-table-container" style="max-height: 425px;">
                         <table class="table td-center team-table">
                           <thead>
                           <tr>
@@ -232,137 +231,85 @@
               <!-- /Filters -->
 
               <!-- Stacking -->
-              <div role="tabpanel" class="tab-pane" id="Stacking">
+              <!--<div role="tabpanel" class="tab-pane" id="Stacking">
                 <div class="panel-container panel-table table-responsive">
                   <table class="table filter-table">
                     <thead>
                     <tr>
-                      <th>Select Stack</th>
+                      <th>Stack Type</th>
                       <th>Team</th>
-                      <th># of Players
-                        <span *ngIf="selectedOperator == 'DraftKings'" style="font-size: 12px"> ({{stackingTeam1.players+stackingTeam2.players+stackingTeam3.players}} player(s) stacked out of 10)</span>
-                        <span *ngIf="selectedOperator == 'FanDuel'" style="font-size: 12px"> ({{stackingTeam1.players+stackingTeam2.players+stackingTeam3.players}} player(s) stacked out of 9)</span>
-                      </th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                      <td>Select Stack</td>
                       <td>
-                        <select class="form-control" [(ngModel)]="stackingTeam1.name" (change)="prepareStacks()">
-                          <option [value]="'-'" selected>Select team</option>
-                          <option *ngFor="let team of stack1" [value]="team.team">{{team.team}}</option>
-                        </select>
+                        <p-checkbox name="groupname"
+                                    value="QB_WR"
+                                    label="QB -> WR"
+                                    (onChange)="onStackingTypeSelect('QB_WR')"
+                                    [(ngModel)]="selectedStakeTypes"></p-checkbox>
                       </td>
                       <td>
-                        <nav aria-label="Page navigation">
-                          <ul class="pagination" *ngIf="stackingTeam1.name != '-'">
-                            <li [class.active]="stackingTeam1.players == 1"
-                                (click)="stackingTeam1.players = 1;validateStakingPlayerCount(stackingTeam1)"><a>1</a>
-                            </li>
-                            <li [class.active]="stackingTeam1.players == 2"
-                                (click)="stackingTeam1.players = 2;validateStakingPlayerCount(stackingTeam1)"><a>2</a>
-                            </li>
-                            <li [class.active]="stackingTeam1.players == 3"
-                                (click)="stackingTeam1.players = 3;validateStakingPlayerCount(stackingTeam1)"><a>3</a>
-                            </li>
-                            <li [class.active]="stackingTeam1.players == 4"
-                                (click)="stackingTeam1.players = 4;validateStakingPlayerCount(stackingTeam1)"><a>4</a>
-                            </li>
-                            <li *ngIf="selectedOperator == 'DraftKings'" [class.active]="stackingTeam1.players == 5"
-                                (click)="stackingTeam1.players = 5;validateStakingPlayerCount(stackingTeam1)"><a>5</a>
-                            </li>
-                          </ul>
-                        </nav>
+                        <p-multiSelect [options]="stack1"
+                                       [(ngModel)]="stackingTeam_QB_WR"
+                                       class="player-position-opt"
+                                       (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
                       </td>
                     </tr>
                     <tr>
-                      <td>Select Stack</td>
                       <td>
-                        <select class="form-control" [(ngModel)]="stackingTeam2.name" (change)="prepareStacks()">
-                          <option [value]="'-'" selected>Select team</option>
-                          <option *ngFor="let team of stack2" [value]="team.team">{{team.team}}</option>
-                        </select>
+                        <p-checkbox name="groupname"
+                                    value="QB_WR_TE"
+                                    label="QB -> WR/TE"
+                                    (onChange)="onStackingTypeSelect('QB_WR_TE')"
+                                    [(ngModel)]="selectedStakeTypes"></p-checkbox>
                       </td>
                       <td>
-                        <nav aria-label="Page navigation">
-                          <ul class="pagination" *ngIf="stackingTeam2.name != '-'">
-                            <li [class.active]="stackingTeam2.players == 1"
-                                (click)="stackingTeam2.players = 1;validateStakingPlayerCount(stackingTeam2)"><a>1</a>
-                            </li>
-                            <li [class.active]="stackingTeam2.players == 2"
-                                (click)="stackingTeam2.players = 2;validateStakingPlayerCount(stackingTeam2)"><a>2</a>
-                            </li>
-                            <li [class.active]="stackingTeam2.players == 3"
-                                (click)="stackingTeam2.players = 3;validateStakingPlayerCount(stackingTeam2)"><a>3</a>
-                            </li>
-                            <li [class.active]="stackingTeam2.players == 4"
-                                (click)="stackingTeam2.players = 4;validateStakingPlayerCount(stackingTeam2)"><a>4</a>
-                            </li>
-                            <li *ngIf="selectedOperator == 'DraftKings'" [class.active]="stackingTeam2.players == 5"
-                                (click)="stackingTeam2.players = 5;validateStakingPlayerCount(stackingTeam2)"><a>5</a>
-                            </li>
-                          </ul>
-                        </nav>
+                        <p-multiSelect [options]="stack3"
+                                       [(ngModel)]="stackingTeam_QB_WR_TE"
+                                       class="player-position-opt"
+                                       (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
                       </td>
                     </tr>
                     <tr>
-                      <td>Select Stack</td>
                       <td>
-                        <select class="form-control" [(ngModel)]="stackingTeam3.name" (change)="prepareStacks()">
-                          <option [value]="'-'">Select team</option>
-                          <option *ngFor="let team of stack3" [value]="team.team">{{team.team}}</option>
-                        </select>
+                        <p-checkbox name="groupname"
+                                    value="QB_TE"
+                                    label="QB -> TE"
+                                    (onChange)="onStackingTypeSelect('QB_TE')"
+                                    [(ngModel)]="selectedStakeTypes"></p-checkbox>
                       </td>
                       <td>
-                        <nav aria-label="Page navigation">
-                          <ul class="pagination" *ngIf="stackingTeam3.name != '-'">
-                            <li [class.active]="stackingTeam3.players == 1"
-                                (click)="stackingTeam3.players = 1;validateStakingPlayerCount(stackingTeam3)"><a>1</a>
-                            </li>
-                            <li [class.active]="stackingTeam3.players == 2"
-                                (click)="stackingTeam3.players = 2;validateStakingPlayerCount(stackingTeam3)"><a>2</a>
-                            </li>
-                            <li [class.active]="stackingTeam3.players == 3"
-                                (click)="stackingTeam3.players = 3;validateStakingPlayerCount(stackingTeam3)"><a>3</a>
-                            </li>
-                            <li [class.active]="stackingTeam3.players == 4"
-                                (click)="stackingTeam3.players = 4;validateStakingPlayerCount(stackingTeam3)"><a>4</a>
-                            </li>
-                            <li *ngIf="selectedOperator == 'DraftKings'" [class.active]="stackingTeam3.players == 5"
-                                (click)="stackingTeam3.players = 5;validateStakingPlayerCount(stackingTeam3)"><a>5</a>
-                            </li>
-                          </ul>
-                        </nav>
+                        <p-multiSelect [options]="stack3"
+                                       [(ngModel)]="stackingTeam_QB_TE"
+                                       class="player-position-opt"
+                                       (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <p-checkbox name="groupname"
+                                    value="RB_D"
+                                    label="RB -> D"
+                                    [(ngModel)]="selectedStakeTypes"></p-checkbox>
+                      </td>
+                      <td>
+                        <p-multiSelect [options]="stack4"
+                                       [(ngModel)]="stackingTeam_RB_D"
+                                       class="player-position-opt"
+                                       (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
                       </td>
                     </tr>
                     </tbody>
                   </table>
                 </div>
-              </div>
+              </div>-->
               <!-- Stacking -->
             </div>
           </div>
         </div>
       </div>
       <!-- /Modal Body -->
-      <div class="subscription-alert-drop-back" *ngIf="showSubscriptionAlert">
-        <div class="subscription-alert">
-          <div class="alert-title">
-            Subscription Required
-          </div>
-          <div class="alert-content">
-            It looks like you do not currently have a subscription.
-            <a (click)="onSubscribeLinkClick()" style="color: #0070ff" data-dismiss="modal">Subscribe</a> today for full access!
-           <!-- It looks like you do not have access to a plan yet. Please
-            <a (click)="onSubscribeLinkClick()" style="color: #0070ff" data-dismiss="modal">subscribe now</a> for full access to
-            RotoPros.-->
-          </div>
-          <div class="alert-footer">
-            <button type="button" class="btn btn-default" (click)="onSubscriptionAlertCloseClick()">Close</button>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
