preview image changed on contest analyzer page.

--- a/src/app/front/components/contact-analyzer/contact-analyzer.component.html
+++ b/src/app/front/components/contact-analyzer/contact-analyzer.component.html
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="infoSec1Rght">
-          <img src="../../../../assets/images/combine.jpg" alt="" class="img-responsive">
+          <img src="../../../../assets/images/combine.png" alt="" class="img-responsive">
         </div>
         <div class="infoSec1Lft">
           <h1 class="infoHedin">
