BG-26 : Move position filter from settings to projection page.

--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -157,7 +157,7 @@
                           <span class="slider-range slider-min">0</span><span class="slider-range slider-max">9</span>
                         </div>
                       </div>
-                      <div class="col-md-12">
+                      <!--<div class="col-md-12">
                         <div class="filter-range-container">
                           <h4 class="rangeslider-value">Position:
                           </h4>
@@ -168,8 +168,7 @@
                                          [(ngModel)]="positionFilterValue"
                                          (onChange)="onPlayerPositionFilterChanged($event)"></p-multiSelect>
                         </div>
-                      </div>
-
+                      </div>-->
                     </div>
                   </div>
                   <!-- /Left -->
