--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
@@ -116,6 +116,22 @@
           </th>
           <th>
             <mfDefaultSorter by="Position">Position</mfDefaultSorter>
+            <i class="fa fa-filter"
+               aria-hidden="true"
+               [ngStyle]="{'color':(positionFilterValue && positionFilterValue.length) ? '#000000':'#999999'}"
+               [md-tooltip]="positionFilterValue && positionFilterValue.length ? (positionFilterValue.length + ' selected') : 'filter' "
+               (click)="posFilterOverlay.toggle($event)"></i>
+            <p-overlayPanel #posFilterOverlay>
+              <p-listbox [options]="positions"
+                         [(ngModel)]="positionFilterValue"
+                         (onChange)="onPlayerPositionFilterChanged($event)"
+                         class="table-filter-listBox"
+                         [metaKeySelection]="false"
+                         multiple="multiple"
+                         checkbox="checkbox"
+                         filter="filter">
+              </p-listbox>
+            </p-overlayPanel>
           </th>
           <th>
             <mfDefaultSorter by="Team">
@@ -130,7 +146,7 @@
               <p-listbox [options]="teams"
                          [(ngModel)]="selectedTeams"
                          (onChange)="onTeamFilterValueChange($event)"
-                         id="table-filter-listBox"
+                         class="table-filter-listBox"
                          [metaKeySelection]="false"
                          multiple="multiple"
                          checkbox="checkbox"
