--- a/src/styles.css
+++ b/src/styles.css
@@ -297,24 +297,24 @@ mfDefaultSorter a {
   border: 1px solid #f8c534 !important;
 }
 
-#table-filter-listBox .ui-widget-header {
+.table-filter-listBox .ui-widget-header {
   background-color: #FFFFFF;
 }
 
-#table-filter-listBox .ui-state-highlight {
+.table-filter-listBox .ui-state-highlight {
   background-color: #FFFFFF !important;
   border: 1px solid #FFFFFF !important;
   color: #000000;
 }
 
-#table-filter-listBox .ui-listbox-list {
+.table-filter-listBox .ui-listbox-list {
   max-height: 200px;
 }
 
-#table-filter-listBox .ui-listbox-item {
+.table-filter-listBox .ui-listbox-item {
   text-align: left !important;
 }
 
-#table-filter-listBox .ui-widget-header {
+.table-filter-listBox .ui-widget-header {
   background-color: #ffffff !important;
 }
