--- a/src/app/front/components/excel-tool/excel-tool.component.html
+++ b/src/app/front/components/excel-tool/excel-tool.component.html
@@ -27,7 +27,7 @@
 
           </div>
           <div class="mlbTopRght">
-            <a target="_blank" href="https://api.dfsportgod.com/uploads/excel_tool.exe" class="dwnldBtn">Download</a>
+            <a target="_blank" (click)="onExcelToolDownloadBtnClicked()" href="https://api.dfsportgod.com/uploads/excel_tool.exe" class="dwnldBtn">Download</a>
             <!--<button type="button" class="dwnldBtn">Download</button>-->
           </div>
 
