--- a/src/app/front/components/extensions/extensions.component.html
+++ b/src/app/front/components/extensions/extensions.component.html
@@ -22,7 +22,7 @@
         </h1>
         <p class="bowerSecHedin">DOWNLOAD THE ROTOPROS EXTENSION FOR GOOGLE CHROME</p>
 
-        <a target="_blank" href="https://chrome.google.com/webstore/detail/draftkingsfanduel-tools/oiimipecejocdcbiedlbabkgmldkjhma" class="bowerDwnBtn">Download</a>
+        <a target="_blank" (click)="onChromeExtensionDownloadBtnClick()" href="https://chrome.google.com/webstore/detail/draftkingsfanduel-tools/oiimipecejocdcbiedlbabkgmldkjhma" class="bowerDwnBtn">Download</a>
       </div>
     </div>
   </div>
