--- a/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
+++ b/src/app/front/components/lineup-optimizer/lineup-optimizer.component.html
@@ -15,6 +15,7 @@
           <span style="padding-right: 20px">
             <a class="btn btn-yellow-black">MLB</a>
             <a class="btn btn-gray-black" routerLink="nfl">NFL</a>
+            <a class="btn btn-gray-black" routerLink="nba">NBA</a>
           </span>
         </div>
         <div class="col-md-5 text-right">
