--- a/src/app/front/components/nfl-lineup-optimizer/nfl-lineup-optimizer.component.html
+++ b/src/app/front/components/nfl-lineup-optimizer/nfl-lineup-optimizer.component.html
@@ -15,6 +15,7 @@
           <span style="padding-right: 20px">
             <a class="btn btn-gray-black" routerLink="/lineup-optimizer">MLB</a>
             <a class="btn btn-yellow-black ">NFL</a>
+            <a class="btn btn-gray-black" routerLink="/lineup-optimizer/nba">NBA</a>
           </span>
         </div>
         <div class="col-md-5 text-right">
