Made subscription buttons stand out, edited home page for cursor to turn into pointer at appropriate links, linked "latest news" to player news, removed salary slider in settings, created svg of facebook icon for footer and added to footer icons

--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -18,14 +18,13 @@
           </ul>-->
         </div>
 
-        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
+        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
           <h1 class="footerHdin">Follow Us On :</h1>
           <ul class="footerSocialLinks">
-            <li><a href="https://twitter.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>
-            </li>
-            <li><a href="https://www.facebook.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.png" alt="" class="img-responsive"/></a>
-            </li>
+            <li><a href="https://www.facebook.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.svg" alt="" class="img-responsive"/></a></li>
+            <li><a href="https://twitter.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a></li>
             <li><a href="https://www.instagram.com/rotopros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
+            <li><a href="mailto: josh@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
