--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -77,16 +77,16 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="filter-range-container">
-                      <h4 class="rangeslider-value">Min/Max Salary:
-                        <span id="mmsSliderVal">{{salarySettingValue[0]}}-{{salarySettingValue[1]}}</span></h4>
-                      <input id="mms" type="text"/>
-                      <span
-                        class="slider-range slider-min">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.MLB_MIN_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.MLB_MIN_SALARY_FOR_DRAFT_KING}}</span><span
-                      class="slider-range slider-max">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.MLB_MAX_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.MLB_MAX_SALARY_FOR_DRAFT_KING}}</span>
-                    </div>
-                  </div>
+                  <!--<div class="col-md-6">-->
+                    <!--<div class="filter-range-container">-->
+                      <!--<h4 class="rangeslider-value">Min/Max Salary:-->
+                        <!--<span id="mmsSliderVal">{{salarySettingValue[0]}}-{{salarySettingValue[1]}}</span></h4>-->
+                      <!--<input id="mms" type="text"/>-->
+                      <!--<span-->
+                        <!--class="slider-range slider-min">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.MLB_MIN_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.MLB_MIN_SALARY_FOR_DRAFT_KING}}</span><span-->
+                      <!--class="slider-range slider-max">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.MLB_MAX_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.MLB_MAX_SALARY_FOR_DRAFT_KING}}</span>-->
+                    <!--</div>-->
+                  <!--</div>-->
                   <div class="col-md-6">
                     <div class="filter-range-container text-center">
                       <div class="checkbox-overlay">
