--- a/src/app/front/components/nfl-lineup-optimizer/nfl-filters/nfl-filters.component.html
+++ b/src/app/front/components/nfl-lineup-optimizer/nfl-filters/nfl-filters.component.html
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-md-6">
+                  <!--<div class="col-md-6">
                     <div class="filter-range-container">
                       <h4 class="rangeslider-value">Min/Max Salary:
                         <span id="mmsSliderVal">{{salarySettingValue[0]}}-{{salarySettingValue[1]}}</span></h4>
@@ -85,7 +85,7 @@
                         class="slider-range slider-min">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.NFL_MIN_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.NFL_MIN_SALARY_FOR_DRAFT_KING}}</span><span
                       class="slider-range slider-max">{{selectedOperator == 'FanDuel' ? lineupOptimizerServiceConst.NFL_MAX_SALARY_FOR_FANDUAL : lineupOptimizerServiceConst.NFL_MAX_SALARY_FOR_DRAFT_KING}}</span>
                     </div>
-                  </div>
+                  </div>-->
                   <div class="col-md-6">
                     <div class="filter-range-container text-center">
                       <div class="checkbox-overlay">
