--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -42,7 +42,7 @@
                     <div class="plan-price">{{(plan.amount / 100) | currency:'USD':true}}</div>
                     <div class="plan-time">{{'/'+plan.interval_count+' '+plan.interval}}</div>
                     <div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>
-                    <button class="btn-subscribe btn-lg btn-default" (click)="onBtnSubscribeClick(plan)">Subscribe
+                    <button class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
                     </button>
                   </div>
                 </div>
