--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -87,14 +87,14 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/news" (click)="closeMobileMenu()">Player News</a>
               </li>
-              <li class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"
+              <li *ngIf="loggedUser && loggedUser.is_subscribe" class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"
                   [routerLinkActiveOptions]="{exact: true}">
                 <a>Lineup Optimizer<span class="caret"></span></a>
                 <div class="dropdown-content" routerLinkActive="active"
                      [routerLinkActiveOptions]="{exact: true}">
                   <a routerLink="/lineup-optimizer" (click)="closeMobileMenu()">MLB Optimizer</a>
                   <a routerLink="/lineup-optimizer/nfl" (click)="closeMobileMenu()">NFL Optimizer</a>
-                  <a routerLink="/lineup-optimizer/nba" (click)="closeMobileMenu()">NBA Optimizer</a>
+                  <!--<a routerLink="/lineup-optimizer/nba" (click)="closeMobileMenu()">NBA Optimizer</a>-->
                 </div>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
@@ -138,6 +138,37 @@
                   </ul>
                 </div>
               </li>
+
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
+                <!--<a routerLink="" (click)="closeMobileMenu()">Home<span class="sr-only">(current)</span></a>-->
+              <!--</li>-->
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a target="_blank" (click)="closeMobileMenu()" href="http://forum.rotopros.com/">Forums</a>-->
+              <!--</li>-->
+              <!--&lt;!&ndash;<li><a>Products</a></li>&ndash;&gt;-->
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a routerLink="/articles" (click)="closeMobileMenu()">Articles</a>-->
+              <!--</li>-->
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
+                <!--<a target="_blank" href="https://dfsgods.slack.com" (click)="closeMobileMenu()">Slack</a>-->
+              <!--</li>-->
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a routerLink="/news" (click)="closeMobileMenu()">Player News</a>-->
+              <!--</li>-->
+              <!--<li *ngIf="loggedUser && loggedUser.is_subscribe" class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"-->
+                  <!--[routerLinkActiveOptions]="{exact: true}">-->
+                <!--<a>Lineup Optimizer<span class="caret"></span></a>-->
+                <!--<div class="dropdown-content" routerLinkActive="active"-->
+                     <!--[routerLinkActiveOptions]="{exact: true}">-->
+                  <!--<a routerLink="/lineup-optimizer" (click)="closeMobileMenu()">MLB Optimizer</a>-->
+                  <!--<a routerLink="/lineup-optimizer/nfl" (click)="closeMobileMenu()">NFL Optimizer</a>-->
+                  <!--<a routerLink="/lineup-optimizer/nba" (click)="closeMobileMenu()">NBA Optimizer</a>-->
+                <!--</div>-->
+              <!--</li>-->
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a routerLink="/subscribe" (click)="closeMobileMenu()">Plans</a>-->
+              <!--</li>-->
+
             </ul>
           </div>
         </div>
