Added soundcloud functionality, work on other UI fixes

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -103,7 +103,7 @@
               </li>
 
               <li id="rss">
-                  <a>Foul Balls</a>
+                  <a routerLink="/podcast">Foul Balls</a>
                   <a href="http://feeds.soundcloud.com/users/soundcloud:users:308749747/sounds.rss">
                     <i class="fa fa-rss-square" id="rss-link"></i>
                   </a>
