--- a/src/app/user/components/settings/user-profile/user-profile.component.html
+++ b/src/app/user/components/settings/user-profile/user-profile.component.html
@@ -1,14 +1,14 @@
 <div class="settings-content" *ngIf="userData">
   <form class="form-horizontal" #f="ngForm">
-    <div class="form-group">
-      <label for="inputUsername" class="col-sm-2 control-label">Username</label>
-      <div class="col-sm-10">
-        <div>
-          <input type="text" class="form-control" id="inputUsername" placeholder="Username"
-                 name="username" [readonly]="userData.user_name" [(ngModel)]="userData.user_name">
-        </div>
-      </div>
-    </div>
+    <!--<div class="form-group">-->
+      <!--<label for="inputUsername" class="col-sm-2 control-label">Username</label>-->
+      <!--<div class="col-sm-10">-->
+        <!--<div>-->
+          <!--<input type="text" class="form-control" id="inputUsername" placeholder="Username"-->
+                 <!--name="username" [readonly]="userData.user_name" [(ngModel)]="userData.user_name">-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
     <div class="form-group">
       <label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
       <div class="col-sm-10">
